@@ -451,58 +451,38 @@ char *get_tmp_directory(const char *work_dir) {
  * with the desired permissions.
  */
 int mkdirs(const char* path, mode_t perm) {
-  struct stat sb;
-  char * npath;
-  char * p;
-  if (stat(path, &sb) == 0) {
-    if (S_ISDIR (sb.st_mode)) {
-      return 0;
-    } else {
-      fprintf(LOGFILE, "Path %s is file not dir\n", path);
-      return -1;
-    }
-  }
-  npath = strdup(path);
-  if (npath == NULL) {
-    fprintf(LOGFILE, "Not enough memory to copy path string");
+  char *buffer = strdup(path);
+  char *token;
+  int cwd = open("/", O_RDONLY);
+  if (cwd == -1) {
+    fprintf(LOGFILE, "Can't open / in %s - %s\n", path, strerror(errno));
+    free(buffer);
     return -1;
   }
-  /* Skip leading slashes. */
-  p = npath;
-  while (*p == '/') {
-    p++;
-  }
-
-  while (NULL != (p = strchr(p, '/'))) {
-    *p = '\0';
-    if (stat(npath, &sb) != 0) {
-      if (mkdir(npath, perm) != 0) {
-        fprintf(LOGFILE, "Can't create directory %s in %s - %s\n", npath,
-                path, strerror(errno));
-        free(npath);
-        return -1;
+  for(token = strtok(buffer, "/"); token != NULL; token = strtok(NULL, "/")) {
+    if (mkdirat(cwd, token, perm) != 0) {
+      if (errno != EEXIST) {
+	    fprintf(LOGFILE, "Can't create directory %s in %s - %s\n",
+			    token, path, strerror(errno));
+	    close(cwd);
+	    free(buffer);
+	    return -1;
       }
-    } else if (!S_ISDIR (sb.st_mode)) {
-      fprintf(LOGFILE, "Path %s is file not dir\n", npath);
-      free(npath);
+    }
+    int new_dir = openat(cwd, token, O_RDONLY);
+    close(cwd);
+    cwd = new_dir;
+    if (cwd == -1) {
+      fprintf(LOGFILE, "Can't open %s in %s - %s\n", token, path,
+		      strerror(errno));
+      free(buffer);
       return -1;
     }
-    *p++ = '/'; /* restore slash */
-    while (*p == '/')
-      p++;
   }
-
-  /* Create the final directory component. */
-  if (mkdir(npath, perm) != 0) {
-    fprintf(LOGFILE, "Can't create directory %s - %s\n", npath,
-            strerror(errno));
-    free(npath);
-    return -1;
-  }
-  free(npath);
+  free(buffer);
+  close(cwd);
   return 0;
 }
-
 
 /**
  * Function to prepare the container directories.
